crates/ruff_linter/src/rules/information_flow/snapshots/ruff_linter__rules__information_flow__tests__IF201_IF201_while.py.snap
---
source: crates/ruff_linter/src/rules/information_flow/mod.rs
---
IF201_while.py:9:5: IF201 Illegal implicit information flow. Current pc label: { secret } is greater than target label: {}. Current pc set at line 8
   |
 8 | while secret_var < 10:
 9 |     public_var = 0 # Fail
   |     ^^^^^^^^^^ IF201
10 |     secret_var += 1 # Success
11 |     while public_var < 10: # Nested while does not decrease the pc {secret}
   |

IF201_while.py:12:9: IF201 Illegal implicit information flow. Current pc label: { secret } is greater than target label: {}. Current pc set at line 8
   |
10 |     secret_var += 1 # Success
11 |     while public_var < 10: # Nested while does not decrease the pc {secret}
12 |         public_var += 1 # Fail
   |         ^^^^^^^^^^ IF201
   |
