crates/ruff_linter/src/rules/information_flow/snapshots/ruff_linter__rules__information_flow__tests__IF203_IF203.py.snap
---
source: crates/ruff_linter/src/rules/information_flow/mod.rs
---
IF203.py:14:6: IF203 Illegal implicit information flow. Argument "p" has label {alice}, but the defined argument label is {}
   |
12 | ## Argument
13 | 
14 | help(secret) #  Fail
   |      ^^^^^^ IF203
15 | help("hello") # Succeed
   |

IF203.py:19:8: IF203 Illegal implicit information flow. Argument "p" has label {alice}, but the defined argument label is {}
   |
17 | ## Keyword
18 | 
19 | help(p=secret) # Fail
   |        ^^^^^^ IF203
20 | help(p="hello") # Succeed
   |
